# elis

./: Cargo.toml  README.md
core/elis-core/: Cargo.toml
core/elis-core/src/: main.rs
core/elis-rope/: Cargo.toml
core/elis-rope/benches/: create.rs  insert.rs  iterators.rs  queries.rs  remove.rs
front-ends/elis-cli/: Cargo.toml
front-ends/elis-cli/src/: main.rs
front-ends/elis-iced/: Cargo.toml
