[package]
name = "ropey"
version = "0.1.0"
authors = ["RemiIia <valent.xarin@gmail.com>"]
description = "Fork of ropey for elis text editor"
# documentation = "https://docs.rs/ropey"
# repository = "https://github.com/cessen/ropey"
# readme = "README.md"
license = "MIT"
keywords = ["rope", "text", "edit", "buffer"]
categories = ["text-processing", "data-structures"]
edition = "2018"

[badges]
travis-ci = { repository = "cessen/ropey" }

[dependencies]
smallvec = "1"

[dev-dependencies]
rand = "0.7"
proptest = "0.9"
unicode-segmentation = "1.3"
criterion = { version = "0.3", features = ["real_blackbox"] }

#-----------------------------------------

[[bench]]
name = "create"
harness = false

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "remove"
harness = false

[[bench]]
name = "queries"
harness = false

[[bench]]
name = "iterators"
harness = false
