[package]
name = "elis-cli"
version = "0.1.0"
authors = ["RemiIia <valent.xarin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.15.0"

async-std = "1.7.0"

serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
